[metadata]
name = lib-pybroker
version = 1.0.3
url = http://www.pybroker.com
author = Edward West
author_email = edwest@pybroker.com
description = Algorithmic trading with machine learning
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPL v3
license_files = LICENSE
classifiers = License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    alpaca-trade-api>=2.3.0,<3
    diskcache>=5.4.0,<6
    joblib>=1.2.0,<2
    numba>=0.56.3,<1
    numpy>=1.23.4,<2
    pandas>=1.5.1,<2
    progressbar2>=4.1.1,<5
    yfinance>=0.1.84,<1

[options.packages.find]
where = src
exclude =
    tests*

[mypy]
python_version = 3.9
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True

[flake8]
per-file-ignores =
    src/pybroker/*.py:E203,E402
    src/pybroker/__init__.py:F401,E402
    tests/*.py:E203,E402
    tests/test_*:E203,E402,F403,F405

[tox:tox]
envlist = py39,py310
isolated_build = True

[testenv]
deps =
    pytest
    pytest-cov
    pytest-instafail
    pytest-lazy-fixture
    pytest-randomly
    pytest-xdist
commands =
    pytest {posargs}

[testenv:typecheck]
deps =
    mypy
commands =
    mypy --show-error-codes --ignore-missing-imports {posargs:src}

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src tests}

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:src tests}

[testenv:docs]
deps =
    nbsphinx
    sphinx
commands =
    sphinx-apidoc \
        --force \
        --implicit-namespaces \
        --module-first \
        --separate \
        -o docs/reference/ \
        src/pybroker/
    sphinx-build -n -W --keep-going -b html docs/ docs/_build/

[tool:pytest]
testpaths = tests
addopts = --strict-markers
xfail_strict = True

[coverage:run]
branch = True

[coverage:report]
show_missing = True

[coverage:paths]
source =
    src/pybroker
    */site-packages/pybroker